--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
   celery:
     env_file: .env
     image: 'encouse/getcourseadapter'
-    command: celery -A server:celery worker -l debug --concurrency=2
+    command: celery -A server:celery worker -l info --concurrency=2
     depends_on:
       - redis
 
   web:
     env_file: .env
     image: 'encouse/getcourseadapter'
-    command: gunicorn --bind 0.0.0.0:5000 --access-logfile - --error-logfile - --log-level info server:app
+    command: "gunicorn --bind 0.0.0.0:5000 --access-logfile - --error-logfile - --log-level info server:app"
     ports: 
       - 127.0.0.1:5000:5000
     depends_on:
